# ZihaoXiao_bosch-ai-agent-challenge-repo

./: .gitignore  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SCALABILITY.md
Other Documents/: README.md  langgraph_stategraph_migration_minimal_v2.md
me-engineering-assistant/: .env.example  .pylintrc  README.md  databricks.yml  eval_after_completeness_fix.json  eval_after_docstring_fix.json  eval_extended.json  eval_extended_v2.json  eval_judge_gpt4o.json  eval_official_v2.json  eval_results.json  evaluation_results.md  pyproject.toml  retrieval_eval_results.json
me-engineering-assistant/docs/: QUICK_REFERENCE.md  agent_graph_examples.md  react_vs_custom_design.md  tier1_claude_code_prompt.md  tier2_implementation_plan.md  validation_workflow.md
me-engineering-assistant/scripts/: chat_cli.py  run_eval.py  run_evaluation.py  run_retrieval_eval.py  train_and_log_model.py
me-engineering-assistant/src/me_assistant/: __init__.py  config.py  exceptions.py
me-engineering-assistant/src/me_assistant/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py  tools.py
me-engineering-assistant/src/me_assistant/documents/: __init__.py  loader.py  store.py
me-engineering-assistant/src/me_assistant/evaluation/: __init__.py  evaluator.py  prompts.py  retrieval_eval.py
me-engineering-assistant/src/me_assistant/model/: __init__.py  mlflow_wrapper.py
me-engineering-assistant/tests/: conftest.py  test_agent.py  test_error_handling.py  test_queries.csv  test_queries_extended.csv  test_retrieval.py
